src/test/ui/feature-gates/feature-gate-generic_associated_types_extended.stderr
error[E0658]: the `#[rustc_error]` attribute is just used for rustc unit tests and will never be stable
  --> $DIR/feature-gate-generic_associated_types_extended.rs:3:1
   |
LL | #[rustc_error]
   | ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
